# Process this file with autoconf to produce a configure script.
# Copyright (c) 2003 Philip Kendall <pak21-spectrum@srcf.ucam.org>

# $Id: configure.ac,v 1.8 2003/12/18 12:18:19 pak21 Exp $

# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA

AC_PREREQ(2.57)

AC_INIT(z802tzx, 1.2, pak21-spectrum@srcf.ucam.org)
AC_CONFIG_SRCDIR([z802tzx.cpp])
AM_INIT_AUTOMAKE

AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL

# Checks for library functions.
AC_CHECK_FUNCS([stricmp strcasecmp])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
